--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,22 @@
 <!doctype html>
-
 <html lang="en">
 <head>
-
   <meta charset="utf-8">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DSI Text Classifier</title>
-
   <meta name="description" content="The Galvanize DSI Text Classifier">
   <meta name="author" content="DSI Instructor">
-
+  <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
 </head>
-
 <body>
-
-  <h1>The Galvanize DSI Text Classifier</h1>
-  <p>This application consumes text snippets from newspaper articles and will classify them as one of several article types.</p>
-  <p><a href="/submit">Get Started!</a></p>
-
+  <div class="container">
+    <div class="jumbotron" style="margin-top: 50px;">
+      <h1>The Galvanize DSI Text Classifier</h1>
+      <p class="lead">This application consumes text snippets from newspaper articles and will classify them as one of several article types.</p>
+      <p><a class="btn btn-primary btn-lg" href="/submit" role="button">Get Started!</a></p>
+    </div>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
