--- a/templates/predict.html
+++ b/templates/predict.html
@@ -23,6 +23,7 @@
           </div>
           <div class="panel-body">
             <h2 class="text-primary">{{ predicted }}</h2>
+            <p class="lead">Confidence: <strong>{{ "%.1f" | format(probability * 100) }}%</strong></p>
           </div>
         </div>
         <div class="panel panel-default">
