using CDNs rather than local static files

--- a/templates/submit.html
+++ b/templates/submit.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DSI Text Classifier - AJAX</title>
   <meta name="description" content="The Galvanize DSI Text Classifier">
-  <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     .result-box {
       margin-top: 20px;
@@ -67,7 +67,7 @@
   </div>
   
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="/bootstrap/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"></script>
   
   <script>
     $(document).ready(function() {
