added name and explanation of what the real purpose of this app is

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,8 @@
 <body>
   <div class="container">
     <div class="jumbotron" style="margin-top: 50px;">
-      <h1>The Galvanize DSI Text Classifier</h1>
-      <p class="lead">This application consumes text snippets from newspaper articles and will classify them as one of several article types.</p>
+      <h1>Kirkwood's Text Classifier</h1>
+      <p class="lead">This application consumes text snippets from newspaper articles and will classify them as one of several article types. However, the true purpose of this site is merely to demonstrate how a machine learning model may be built into a Flask app.</p>
       <p><a class="btn btn-primary btn-lg" href="/submit" role="button">Get Started!</a></p>
     </div>
   </div>
